test/expected/unterminated_quote_in_the_middle.out
shit: 2:6: error: Unterminated string literal.
     2 |  first"second
       |       ^~~~~~~ here.
shit: 2:13: note:
     2 |  first"second
       |              ^~ Expected " here.
